# rooney

./: .gitignore  Cargo.toml  README.md
configuration/: DB.toml  Updater.toml  config.toml
src/: db.rs  irc.rs  lib.rs  main.rs  replies.rs
src/commands/: advice.rs  ats.rs  diff.rs  fiat.rs  formatter.rs  mod.rs  movers.rs  price.rs  remark.rs  stats.rs
src/db/: advice.rs  ats.rs  diff.rs  fiat.rs  formatter.rs  mod.rs  mover.rs  nicks.rs  price.rs  remarks.rs  stats.rs
src/replies/: advice.rs  ats.rs  diff.rs  fiat.rs  formatter.rs  help.rs  mod.rs  movers.rs  price.rs  remark.rs  stats.rs
