[package]
name = "rooney"
version = "0.1.4"
authors = ["nemo <nemo@redbrick.dcu.ie>"]
edition = "2018"
default-run = "rooney_bot"

[dependencies]
chrono = "0.4.0"
env_logger = "0.6"
failure = "0.1"
irc = "0.13"
log = "0.4.6"
postgres = {version = "0.15.2", features = ["with-chrono"]}
reqwest = {version = "0.10.6", features = ["blocking"]}
serde = { version = "=1.0.117", features = ["derive"] }
serde_json = { version = "1.0.0" }
separator = "0.3.1"
toml = "=0.5.5"
titlecase = "0.9"
